# nosound

./: .clang-format  .gitignore  .gitmodules  Beeper__async__mod_8c.html  Beeper__async__mod_8c_source.html  CMakeLists.txt  Color12_8c.html  Color12_8c.js  Color12_8c_a384ba1ea9636c051122962c9f306c4c7_cgraph.map  Color12_8c_ad73d7fb0a15851246ca439bb3146aa09_cgraph.map  Color12_8c_ad73d7fb0a15851246ca439bb3146aa09_cgraph.md5  Color12_8c_ad73d7fb0a15851246ca439bb3146aa09_icgraph.map  Color12_8c_ad73d7fb0a15851246ca439bb3146aa09_icgraph.md5  Color12_8c_af369a113a2fa54f4ff955ee15a0258cb_icgraph.map  Color12_8c_af369a113a2fa54f4ff955ee15a0258cb_icgraph.md5  Color12_8c_source.html  Color12_8h.html  Color12_8h_a384ba1ea9636c051122962c9f306c4c7_cgraph.map  Color12_8h_a384ba1ea9636c051122962c9f306c4c7_cgraph.md5  Color12_8h_source.html  Doxyfile  Entity_8c.html  Entity_8c.js  Entity_8c_a60685ea54606acc1edf9d7d6ecb98597_cgraph.map  Entity_8c_a60685ea54606acc1edf9d7d6ecb98597_cgraph.md5  Entity_8c_a60685ea54606acc1edf9d7d6ecb98597_icgraph.map  Entity_8c_a60685ea54606acc1edf9d7d6ecb98597_icgraph.md5  Entity_8c_a79898b39d04c9ff87d373b3986fd3a97_cgraph.map  Entity_8c_a79898b39d04c9ff87d373b3986fd3a97_cgraph.md5  Entity_8c_ad3e36f1fdef8fd8991e800e159bf7588_icgraph.map  Entity_8c_ad3e36f1fdef8fd8991e800e159bf7588_icgraph.md5  Entity_8c_ae78b6d19ee7624ece7ce531e54ef4029_cgraph.map  Entity_8c_ae78b6d19ee7624ece7ce531e54ef4029_cgraph.md5  Entity_8c_source.html  MonoIMG_8c.html  MonoIMG_8c.js  MonoIMG_8c_a1ced59b40b6734de45c5faa16241bb8e_cgraph.map  MonoIMG_8c_a1ced59b40b6734de45c5faa16241bb8e_cgraph.md5  MonoIMG_8c_a1ced59b40b6734de45c5faa16241bb8e_icgraph.map  MonoIMG_8c_a1ced59b40b6734de45c5faa16241bb8e_icgraph.md5  (+822 more)
.github/workflows/: deploy_pages.yml
.removed_but_keept_as_reference/demo/: main.c
.removed_but_keept_as_reference/demo_audio/: main
.removed_but_keept_as_reference/demo_entity/: main.c
.removed_but_keept_as_reference/prgManagerUI/: main  main.c
.removed_but_keept_as_reference/test_scaling/: main
PRG/001/: main  main.c
PRG/demo/: main  main.c
PRG/demo_audio/: main  main.c
PRG/demo_beeper_noteFade/: main  main.c
PRG/demo_entity/: main  main.c
PRG/demo_sprite/: main  main.c
PRG/prgManagerUI/: main  main.c
PRG/program_starter/: main  main.c
PRG/seq/: main  main.c
PRG/test_scaling/: main  main.c
PRG/tests/: main  main.c
PRG/tile_engine/: NewFile  collection.c  collection.h  main  main.c  perling.c
assets/: docstyle.css  logo.xcf
doc/html/: Color12_8c_source.html  Color12_8h_source.html  Entity_8c_source.html  MonoIMG_8c_source.html  Vect2_8c_source.html  Vect2_8h_source.html  alsa_8c.html  alsa_8c_a0ac502f495258539dc94eab92f1374e0_cgraph.md5  alsa_8c_a0ac502f495258539dc94eab92f1374e0_icgraph.md5  alsa_8c_a0ce3aa106ebe2ead4e973a2f822adc58_icgraph.md5  alsa_8c_ae412a173f6c0a1cf5740e4560805c0e0_icgraph.md5  alsa_8c_aea1bf42132dcac84dd8a87f1668a06af_cgraph.md5  alsa_8c_aea1bf42132dcac84dd8a87f1668a06af_icgraph.md5  alsa_8c_source.html  alsa_8h_source.html  annotated.html  annotated_dup.js  beeper_8c.html  beeper_8c_a02a1079fdde6983501d352ade4fc8820_icgraph.md5  beeper_8c_a14378adcd3dc6de705ee96f58d16d614_cgraph.md5  beeper_8c_a14378adcd3dc6de705ee96f58d16d614_icgraph.md5  beeper_8c_a6c54e4ecb34a083f104e9ee50375089b_cgraph.md5  beeper_8c_a6c54e4ecb34a083f104e9ee50375089b_icgraph.md5  beeper_8c_a6c8ac042df37feabf8ba0ccdea2eead6_icgraph.md5  beeper_8c_a72deb942d53bd05bf3afcf5dd60cfe4a_cgraph.md5  beeper_8c_ab08da8bf3caa6403050b198ce9df961e_icgraph.md5  beeper_8c_acc4e6d4c667114ec6096cd561c27a399_icgraph.md5  beeper_8c_adab583b7b4618aeef08816b2dcab7a0f_cgraph.md5  beeper_8c_adab583b7b4618aeef08816b2dcab7a0f_icgraph.md5  beeper_8c_ae1bdc8c5284d85fe7ecbd35fc1dcb65b_cgraph.md5  beeper_8c_af1c0d2f0b8546bfcf95f49909650fc70_icgraph.md5  beeper_8c_source.html  beeper_8h.html  beeper_8h_source.html  classes.html  color12_8c.html  color12_8c_a384ba1ea9636c051122962c9f306c4c7_cgraph.md5  color12_8c_a384ba1ea9636c051122962c9f306c4c7_icgraph.md5  color12_8c_ad73d7fb0a15851246ca439bb3146aa09_cgraph.md5  color12_8c_ad73d7fb0a15851246ca439bb3146aa09_icgraph.md5  (+268 more)
docs/html/: Color12_8c.html  Color12_8c_a384ba1ea9636c051122962c9f306c4c7_icgraph.md5  Color12_8c_ad73d7fb0a15851246ca439bb3146aa09_cgraph.md5  Color12_8c_ad73d7fb0a15851246ca439bb3146aa09_icgraph.md5  Color12_8c_af369a113a2fa54f4ff955ee15a0258cb_icgraph.md5  Color12_8c_source.html  Color12_8h.html  Color12_8h.js  Color12_8h_a384ba1ea9636c051122962c9f306c4c7_cgraph.md5  Color12_8h_source.html  Entity_8c.html  Entity_8c_a60685ea54606acc1edf9d7d6ecb98597_cgraph.md5  Entity_8c_a60685ea54606acc1edf9d7d6ecb98597_icgraph.md5  Entity_8c_a79898b39d04c9ff87d373b3986fd3a97_icgraph.md5  Entity_8c_acb67156a02a6cc8d5c8d81163565f1e1_icgraph.md5  Entity_8c_ad3e36f1fdef8fd8991e800e159bf7588_icgraph.md5  Entity_8c_ae78b6d19ee7624ece7ce531e54ef4029_cgraph.md5  Entity_8c_ae78b6d19ee7624ece7ce531e54ef4029_icgraph.md5  Entity_8c_source.html  MonoIMG_8c.html  MonoIMG_8c_a1ced59b40b6734de45c5faa16241bb8e_cgraph.md5  MonoIMG_8c_a1ced59b40b6734de45c5faa16241bb8e_icgraph.md5  (+730 more)
ext/: jsmn.h
include/: Color12.h  Vect2.h  alsa.h  beeper.h  file.h  loopManager.h  looper.h  nosound.h  path.h  prg.h  prgManager.h  rythm.h  sdlHelper.h  spriteManager.h  stringHelper.h  term.h  tv.h  tv_ASCII.h  tv_COLORS.h  tv_KEYS.h  waves.h
lib/: waves.c  waves.h
lib/alsa/: alsa.c
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  files_8.js  files_9.js  files_a.js  files_b.js  (+55 more)
src/: loopManager.c  nosound.c  prgManager.c  spriteManager  spriteManager.c  waves.c
templates/: CMakeLists.txt  prg_wrapper.c  spritesheet.xcf
tests/: stringArrayValueChangeByFunction  stringArrayValueChangeByFunction.c
(+199 files in other folders)
